Update README.md / still needs to merge all